# sbb-angular

./: .bazelignore  .bazelrc  .editorconfig  .gitattributes  .gitignore  .npmignore  .npmrc  .nvmrc  .prettierignore  .travis.yml  .yarnrc  BUILD.bazel  CHANGELOG.md  CODE_OF_CONDUCT.md  CODING_STANDARDS.md  CONTRIBUTING.md  DEVELOPER.md  Dockerfile  Jenkinsfile  LICENSE  MERGE_MIGRATION.md  MODULE.bazel  README.md  RELEASE.md  RELEASE_HOW_TO.md  WORKSPACE  angular-tsconfig.json  angular.json  angular.json.bak1  browsers.json  docker-compose.yml  jasmine.json  lintReport.json  package-lock.json  package.json  packages.bzl  pkg-externals.bzl  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json  (+10 more)
docs/: BUILD.bazel  angular.json  defs.bzl  karma.conf.js  package.json  tsconfig.json
docs/api/: sbb-angular-autocomplete.html  sbb-angular-button.html  sbb-angular-checkbox.html  sbb-angular-field.html  sbb-angular-links.html  sbb-angular-radio-button.html  sbb-angular-svg-icons-components.html  sbb-angular-textarea.html
docs/examples/: input-field-showcase.component.spec-ts.html
docs/src/: index.html  main.ts  styles.scss
src/: BUILD.bazel  README.md  _bootstrap.scss  bazel-tsconfig-build.json  bazel-tsconfig-test.json  index.html  initialize_testbed.ts  karma.conf.js  main.ts  polyfills.ts  public_api_icons.ts  styles.scss  test.ts  tslint.json
src/angular/: BUILD.bazel  _index.scss  _style_bundle.scss  breakpoints.md  config.bzl  creating-a-custom-form-field-control.md  fullfont.scss  getting-started.md  i18n.md  migration-guide.md  package.json  tsconfig.json  typography.md  typography.scss
src/angular-business/: BUILD.bazel  _style_bundle.scss  config.bzl  getting-started.md  package.json  public-api.ts  tsconfig.json  typography.md
src/angular-core/: BUILD.bazel  _style_bundle.scss  config.bzl  package.json  public-api.ts  tsconfig.json
src/angular-experimental/: BUILD.bazel  config.bzl  getting-started.md  index.ts  package.json  tsconfig.json
src/angular-icons/: BUILD.bazel  config.bzl  getting-started.md  icon-collection-root.module.ts  package.json  public-api.ts  root.ts  tsconfig.json
src/angular-keycloak/: BUILD.bazel  README.md  config.bzl  package.json  tsconfig.json
src/angular-leaflet/: BUILD.bazel  config.bzl  package.json  public-api.ts  tsconfig.json
src/angular-maps/: BUILD.bazel  accessing-map-data.md  config.bzl  getting-started.md  layer-filtering.md  loading-arcgis-types.md  mapping-basics.md  overview-and-usage.md  package.json  public-api.ts  tsconfig.json  using-arcgis-types.md
src/angular-maps-leaflet/: BUILD.bazel  config.bzl  esri-leaflet.md  getting-started.md  mapping-basics.md  overview-and-usage.md  package.json  public-api.ts  tsconfig.json
src/angular-public/: BUILD.bazel  config.bzl  creating-a-custom-form-field-control.md  getting-started.md  package.json  public-api.ts  tsconfig.json  typography.md  typography.scss
src/app/: app-routing.module.ts  app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.module.ts  sbb-components-mapping-export.ts  sbb-components-mapping.ts  svg-icon-collection.ts
src/business/: BUILD.bazel  _style_bundle.scss  _styles.scss  config.bzl  getting-started.md  package.json  public-api.ts  tsconfig.json  typography.scss
src/components-examples/: BUILD.bazel  config.bzl  example-data.ts  example-module.d.ts  examples.module.ts  load-example.ts  package.json  public-api.ts  tsconfig.json
src/core/: BUILD.bazel  config.bzl  getting-started.md  karma.conf.js  package.json  public-api.ts  tsconfig.json
src/examples/: BUILD.bazel  config.bzl  examples.module.ts  tsconfig.json
src/icons/: BUILD.bazel  config.bzl  meta-information.ts  ng-package.json  package.json  public-api.ts  tsconfig.json  tsconfig.spec.json
src/journey-maps/: BUILD.bazel  comparison.md  config.bzl  getting-started.md  migrate-from-rokas.md  migrate-to-sbb-angular.md  package.json  public-api.ts  tsconfig.json  web-component-examples.md
src/journey-maps-wc/: BUILD.bazel  angular.json  defs.bzl  getting-started.md  index.d.ts  karma.conf.js  package.json  tsconfig.json  web-component-examples.md
src/keycloak/: BUILD.bazel  config.bzl  karma.conf.js  ng-package.json  package.json  public-api.ts  tsconfig.json
src/maps/: BUILD.bazel  config.bzl  loading-arcgis-types.md  mapping-basics.md  ng-package.json  package.json  tsconfig.json  tsconfig.spec.json  tslint.json
src/public/: BUILD.bazel  _styles.scss  config.bzl  index.ts  package.json  test.ts  tsconfig.json  typography.scss
src/showcase/: BUILD.bazel  index.html  index.prod.html  index.template.html  initializer.js  karma.conf.js  main.dev.ts  main.prod.ts  main.ts  ng-localize-bundle.js  package.json  rollup.config.js  styles.scss  tsconfig.app.json  tsconfig.json
src/showcase-merge/: BUILD.bazel  index.dev.html  index.prod.html  rollup.config.js  styles.scss  tsconfig.json
src/styles/: _main.scss  _navigation.scss  _scaffolding.scss  _themes.scss  _typo.scss
tools/: BUILD.bazel  bazel-additional-stamp.mjs  bazel-stamp-vars.js  defaults.bzl  tsconfig.json
tools/angular/: create_linker_esbuild_plugin.mjs  esbuild.config.mjs  index.bzl
tools/angular-localize/: BUILD.bazel  localize_shim.js
tools/arcgis-core/: BUILD.bazel  arcgis-core-bundle.js  arcgis-core-umd.js  rollup.config.js
tools/bazel/: ng_package_interop.bzl  web_test_suite.bzl
tools/dev-server/: dev-server.ts  ibazel.ts  index.bzl  launcher_template.sh  main.ts
tools/dgeni/: bazel-bin.ts  docs-package.ts  index.bzl  index.ts  patch-log-service.ts  tsconfig.json
tools/differential-loading-merge/: BUILD.bazel  differential-loading-merge.ts  index.bzl
tools/esbuild/: devmode-output.bzl  esbuild-amd-config.mjs  index.bzl
tools/esri-loader/: BUILD.bazel  esri_amd_loader_config.js  esri_loader_shim.js
tools/example-module/: bazel-bin.ts  example-module.template  generate-example-module.ts  parse-example-file.ts  parse-example-module-file.ts  tsconfig.json
tools/gulp/: tsconfig.json
tools/highlight-files/: BUILD.bazel  highlight-code-block.mts  index.bzl  (+2 more)
(+12398 files in other folders)
