load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")

package(default_visibility = ["//visibility:public"])

# This export allows targets in other packages to reference files that live
# in this package.
exports_files([
    "package.json",
    "tsconfig.json",
    "LICENSE",
    "scss-bundle.config.json",
])

nodejs_binary(
    name = "yarn_vendored",
    data = [".yarn/releases/yarn-1.22.22.cjs"],
    entry_point = ".yarn/releases/yarn-1.22.22.cjs",
    visibility = ["//integration:__subpackages__"],
)
