load("@npm//@bazel/typescript:index.bzl", "ts_config")
load("//src/angular:config.bzl", "ANGULAR_ENTRYPOINTS", "ANGULAR_TESTING_ENTRYPOINTS")
load("//src/angular-experimental:config.bzl", "EXPERIMENTAL_ENTRYPOINTS", "EXPERIMENTAL_TESTING_ENTRYPOINTS")
load("//src/angular-maps:config.bzl", "MAPS_ENTRYPOINTS", "MAPS_TESTING_ENTRYPOINTS")
load("//tools:defaults.bzl", "ts_library")
load("//tools/dgeni:index.bzl", "dgeni_api_docs")

package(default_visibility = ["//visibility:public"])

exports_files([
    "bazel-tsconfig-build.json",
    "bazel-tsconfig-test.json",
    "README.md",
])

ts_config(
    name = "tsconfig-test",
    src = "bazel-tsconfig-test.json",
    deps = ["bazel-tsconfig-build.json"],
)

angular_api_entry_points = ANGULAR_ENTRYPOINTS + ANGULAR_TESTING_ENTRYPOINTS

angular_experimental_api_entry_points = EXPERIMENTAL_ENTRYPOINTS + EXPERIMENTAL_TESTING_ENTRYPOINTS

maps_api_entry_points = MAPS_ENTRYPOINTS + MAPS_TESTING_ENTRYPOINTS

# List that contains all source files that need to be processed by Dgeni.
api_source_files = ["//src/angular/%s:source-files" % name for name in angular_api_entry_points] + \
                   ["//src/angular-experimental/%s:source-files" % name for name in angular_experimental_api_entry_points] + \
                   ["//src/angular-maps/%s:source-files" % name for name in maps_api_entry_points]

dgeni_api_docs(
    name = "api-docs",
    srcs = api_source_files + [
        # Add all Angular packages to the sources because some Material exports use
        # Angular exports and these should not cause any warnings when Dgeni uses the
        # type checker to parse our TypeScript sources.
        "@npm//@angular/cdk",
        "@npm//@angular/core",
        "@npm//@angular/common",
        "@npm//@angular/forms",
        "@npm//@angular/animations",
        "@npm//@angular/platform-browser",
    ],
    entry_points = {
        "angular": angular_api_entry_points,
        "angular-experimental": angular_experimental_api_entry_points,
        "angular-maps": maps_api_entry_points,
    },
    tags = ["docs-package"],
)

ts_library(
    name = "dev_mode_types",
    srcs = ["dev-mode-types.d.ts"],
)
