load(
    "//src/angular-maps-leaflet:config.bzl",
    "LEAFLET_ENTRYPOINTS",
    "LEAFLET_MARKDOWN_TARGETS",
    "LEAFLET_TARGETS",
    "LEAFLET_TESTING_TARGETS",
)
load(
    "//tools:defaults.bzl",
    "markdown_to_html",
    "ng_module",
    "ng_package",
)

package(default_visibility = ["//visibility:public"])

# Root "@sbb-esta/angular-maps-leaflet" entry-point.
ng_module(
    name = "angular-maps-leaflet",
    srcs = glob(
        ["*.ts"],
        exclude = ["**/*.spec.ts"],
    ),
    module_name = "@sbb-esta/angular-maps-leaflet",
    deps = ["//src/angular-maps-leaflet/%s" % p for p in LEAFLET_ENTRYPOINTS],
)

markdown_to_html(
    name = "overview",
    srcs = [
      ":getting-started.md",
      ":mapping-basics.md",
      ":overview-and-usage.md",
      ":esri-leaflet.md",
    ],
)

filegroup(
    name = "overviews",
    srcs = [":overview"] + ["//src/angular-maps-leaflet/%s:overview" % name for name in LEAFLET_MARKDOWN_TARGETS],
)

# Creates the @sbb-esta/angular-maps-leaflet package published to npm.
ng_package(
    name = "npm_package",
    srcs = [
        "package.json",
    ],
    data = [
    ],
    entry_point = ":public-api.ts",
    entry_point_name = "angular-maps-leaflet",
    tags = ["release-package"],
    deps = LEAFLET_TARGETS + LEAFLET_TESTING_TARGETS,
)
