load(
    "//src/angular-maps:config.bzl",
    "MAPS_ENTRYPOINTS",
    "MAPS_MARKDOWN_TARGETS",
    "MAPS_TARGETS",
    "MAPS_TESTING_TARGETS",
)
load(
    "//tools:defaults.bzl",
    "markdown_to_html",
    "ng_module",
    "ng_package",
)

package(default_visibility = ["//visibility:public"])

# Root "@sbb-esta/angular-maps" entry-point.
ng_module(
    name = "angular-maps",
    srcs = glob(
        ["*.ts"],
        exclude = ["**/*.spec.ts"],
    ),
    deps = ["//src/angular-maps/%s" % p for p in MAPS_ENTRYPOINTS],
)

markdown_to_html(
    name = "overview",
    srcs = glob(["*.md"]),
)

filegroup(
    name = "overviews",
    srcs = [":overview"] + ["//src/angular-maps/%s:overview" % name for name in MAPS_MARKDOWN_TARGETS],
)

# Creates the @sbb-esta/angular-maps package published to npm.
ng_package(
    name = "npm_package",
    srcs = [
        "package.json",
    ],
    data = [
    ],
    entry_point = ":public-api.ts",
    entry_point_name = "angular-maps",
    tags = ["release-package"],
    deps = MAPS_TARGETS + MAPS_TESTING_TARGETS,
)
